--- a/SFXpad/Properties/Resources.resx
+++ b/SFXpad/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="APRING" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\APRING.WAV;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="ดาวน์โหลด__2_" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ดาวน์โหลด (2).ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
